--- a/CHU_index.html
+++ b/CHU_index.html
@@ -549,7 +549,7 @@ $('.navbarM').css('transform','translate3d(-1200px,0px,0px)')
 // 害羞點擊
 $('.littlechu svg').click(function(){
   $('.shybox').css('opacity','0.6');
-  // $('.littlechu svg').css('opacity','0.6');
+  $('.littlechu svg').css('opacity','0.6');
 })
 </script>
 
