--- a/CHU_index.html
+++ b/CHU_index.html
@@ -10,7 +10,7 @@
         <!-- <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />      -->
      
     
-        <link rel="stylesheet" href="./css/layout_desktop.css" type="text/css" />
+        <link rel="stylesheet" href="./css/layoutDesktop.css" type="text/css" />
         <link rel="stylesheet" href="./css/layout_mobile.css" type="text/css" />
         <link rel="stylesheet" href="./css/for_swiper.css" type="text/css" />
         <link rel="stylesheet" href="./css/for_boos.css" type="text/css" />
