--- a/CHU_workFuntown.html
+++ b/CHU_workFuntown.html
@@ -116,9 +116,9 @@
 <div class="container">
   <p class="STitle">Demo - 遊戲宣傳圖、美術UI、道具繪製、印刷品周邊製作......等 </p>
   <div class="picBox">
-    <img src="/images/work20funtown/funPIC (9).png" alt="遊戲App內道具圖繪製">
-    <img src="/images/work20funtown/funPIC (21).png" alt="遊戲App內活動的美術設定、背景繪製、標題設計、禮包圖繪製">
-    <img src="/images/work20funtown/funPIC (10).png" alt="遊戲Banner">
+    <img src="./images/work20funtown/funPIC (9).png" alt="遊戲App內道具圖繪製">
+    <img src="./images/work20funtown/funPIC (21).png" alt="遊戲App內活動的美術設定、背景繪製、標題設計、禮包圖繪製">
+    <img src="./images/work20funtown/funPIC (10).png" alt="遊戲Banner">
        <img src="./images/work20funtown/funPIC (6).jpg" alt="販售周邊-壓克力立牌與食物插畫繪製">
    <img src="./images/work20funtown/funPIC (1).jpg" alt="行銷周邊設計-扇子、茶罐腰封">
    <img src="./images/work20funtown/funPIC (2).jpg" alt="行銷周邊設計製作-L夾、杯墊、立牌">
