--- a/CHU_workFuntown.html
+++ b/CHU_workFuntown.html
@@ -8,6 +8,7 @@
    <!-- for swiper link css -->
    <link rel="stylesheet" href="./css/swiper-bundle.min.css" type="text/css" />
    <!-- <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />      -->
+   <link rel="stylesheet" href="./css/reset.css" type="text/css" />
     <link rel="stylesheet" href="./css/layout_desktop.css" type="text/css" />
     <link rel="stylesheet" href="./css/layout_mobile.css" type="text/css" />
     <link rel="stylesheet" href="./css/for_swiper.css" type="text/css" />
