--- a/CHU_index.html
+++ b/CHU_index.html
@@ -196,7 +196,7 @@
                              </svg> -->
                              
                            <svg  class="skills-icon col-2 col-sm-1 col-xl-1" >
-                             <use xlink:href="./icomoon/symbol-defs.svg"></use>
+                             <use xlink:href="./icomoon/symbol-defs.svg#icon-html5"></use>
                            </svg>
                            <!-- <svg  class="skills-icon col-2 col-sm-1 col-xl-1" version="1.1" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 32 32">
              <title>html5</title>
@@ -204,7 +204,7 @@
              </svg> -->
              
                   <svg  class="skills-icon col-2 col-sm-1 col-xl-1" >
-                             <use xlink:href="../icomoon/symbol-defs.svg#icon-jquery"></use>
+                             <use xlink:href="./icomoon/symbol-defs.svg#icon-jquery"></use>
                            </svg>
              <!-- <svg  class="skills-icon col-2 col-sm-1 col-xl-1" version="1.1" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 32 32">
                 <title>jQuery</title>
