--- a/hobbyLine.html
+++ b/hobbyLine.html
@@ -16,7 +16,7 @@
     
 </head>
 <body>
-  <a href="CHU_index.html#hobby"> <div class="return">
+  <a href="index.html#hobby"> <div class="return">
 
  <p>Back</p>
   </div></a>
@@ -26,7 +26,7 @@
   </div>
     <nav >
         <div class="navbar">
-       <a href="CHU_index.html"><svg  class="logo"><use xlink:href="./icomoon/symbol-defs.svg#icon-chu-logo"></use>  </svg></a>
+       <a href="index.html"><svg  class="logo"><use xlink:href="./icomoon/symbol-defs.svg#icon-chu-logo"></use>  </svg></a>
         <svg  class="menu"><use xlink:href="./icomoon/symbol-defs.svg#icon-menu"></use>  </svg>
 
       </div>
@@ -36,11 +36,11 @@
       <svg  class="close"><use xlink:href="./icomoon/symbol-defs.svg#icon-close"></use>  </svg>
       <ul class="navListM">
      
-        <li><a href="CHU_index.html">Home</a><li></li>
-        <li> <a href="CHU_index.html#about">About</a></li>
-          <li><a href="CHU_index.html#work">Work experience</a></li>
-            <li><a href="CHU_index.html#Performance">Performances experience</a></li>
-              <li><a href="CHU_index.html#hobby">Hobby</a></li>
+        <li><a href="index.html">Home</a><li></li>
+        <li> <a href="index.html#about">About</a></li>
+          <li><a href="index.html#work">Work experience</a></li>
+            <li><a href="index.html#Performance">Performances experience</a></li>
+              <li><a href="index.html#hobby">Hobby</a></li>
       </ul>
 
      </div>
