--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
       <ul class="navListM">
      
         <li><a href="">Home</a><li></li>
-        <li> <a href="CHU_index.html#about">About</a></li>
-          <li><a href="CHU_index.html#work">Work experience</a></li>
-            <li><a href="CHU_index.html#Performance">Performances experience</a></li>
-              <li><a href="CHU_index.html#hobby">Hobby</a></li>
+        <li> <a href="index.html#about">About</a></li>
+          <li><a href="index.html#work">Work experience</a></li>
+            <li><a href="index.html#Performance">Performances experience</a></li>
+              <li><a href="index.html#hobby">Hobby</a></li>
       </ul>
 
      </div>
@@ -268,7 +268,7 @@
     6.跨部門協助研發團隊，博弈遊戲APP UI介面優化.<br>
     7.協助執行遊戲2D美術設計及ICON製作。<br>
     8.商城官網吉祥物角色設計.</p><br>
-    <a href="CHU_workFuntown.html">More</a>
+    <a href="workFuntown.html">More</a>
       </div>
     </div>
     <div class="workwrap wrapExtreme  ">
@@ -278,7 +278,7 @@
         <p class="company">極限電競股份有限公司</p><br>
         <p>1.活動網站的UI介面規劃.<br>2.網站icon、banner設計.<br>3.協會與戰隊的LOGO與標準字設計.<br>4.大型賽式活動平面設計（印刷品及大型刊物等等）.<br>5.電競賽式轉播影片的介面設計.<br>6.提案簡報排版及插圖繪製.
           <br>7.參與《校際電競公開賽》活動籌備，處理三天現場報到事項並帶隊64組電競隊伍入場.</p><br>
-          <a href="CHU_workExtreme.html">More</a>
+          <a href="workExtreme.html">More</a>
             </div>
     </div>
     <div class="workwrap wrapWant ">
@@ -323,10 +323,10 @@
 <div class="workMobile">
   <h2>Work experience</h2> 
  
- <a href="CHU_workFuntown.html"><div class="wrapFuntown Mwrap  ">
+ <a href="workFuntown.html"><div class="wrapFuntown Mwrap  ">
     <div class="WMobileList"> <p>2018-2020</p><h3>遊戲視覺設計</h3><p>和信超媒體股份有限公司戲谷分公司</p></div>  
     </div></a> 
-    <a href="CHU_workExtreme.html"><div class="wrapExtreme Mwrap">  <div class="WMobileList"> <p>2017-2018</p><h3>活動視覺設計</h3><p>極限電競股份有限公司</p></div>  </div></a>
+    <a href="workExtreme.html"><div class="wrapExtreme Mwrap">  <div class="WMobileList"> <p>2017-2018</p><h3>活動視覺設計</h3><p>極限電競股份有限公司</p></div>  </div></a>
   <div class="wrapWant Mwrap">  <div class="WMobileList"> <p>2014-2017</p><h3>報社美術編輯</h3><p>旺旺中時媒體集團</p></div>  </div>
   <div class="wrapHong Mwrap">  <div class="WMobileList"> <p>2013-2014</p><h3>電商平面設計</h3><p>鴻昌照相器材有限公司</p></div>  </div>
   <div class="wrapYes Mwrap">  <div class="WMobileList"> <p>2012-2014</p><h3>兼職特效化妝</h3><p>葉式特工</p></div>  </div>
@@ -402,7 +402,7 @@
               <div class="container">
                 <h2>Hobby</h2>  
                 <div class="row">
-                <a href="CHU_hobbyLine.html">  <div class="mainline hobbyBox "></div><p>LINE貼圖創作</p></a>
+                <a href="hobbyLine.html">  <div class="mainline hobbyBox "></div><p>LINE貼圖創作</p></a>
                 <a  href="">  <div class="maindraw hobbyBox"></div>  <p>繪畫創作</p></a>
                  <a  href=""> <div class="maintoys hobbyBox"></div> <p>玩具攝影</p></a>
                 </div>
