--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
          <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="2021年阮楚琳(Chu-lin)作品集網站，運用撰寫Css、Html、Jquery與網頁設計等技術獨立製作。" />
         <title>Chu-lin's portfolio</title>
         <!-- for swiper link css -->
         <link rel="stylesheet" href="./css/swiper-bundle.min.css" type="text/css" />
