funtown page(lazyload)測試

--- a/workFuntown.html
+++ b/workFuntown.html
@@ -117,23 +117,23 @@
 <div class="container">
   <p class="STitle">Demo - 遊戲宣傳圖、美術UI、道具繪製、印刷品周邊製作......等 </p>
   <div class="picBox">
-    <img src="./images/work20funtown/funPIC (9).png" alt="遊戲App內道具圖繪製">
-    <img src="./images/work20funtown/funPIC (21).png" alt="遊戲App內活動的美術設定、背景繪製、標題設計、禮包圖繪製">
-    <img src="./images/work20funtown/funPIC (10).png" alt="遊戲Banner">
-       <img src="./images/work20funtown/funPIC (6).jpg" alt="販售周邊-壓克力立牌與食物插畫繪製">
-   <img src="./images/work20funtown/funPIC (1).jpg" alt="行銷周邊設計-扇子、茶罐腰封">
-   <img src="./images/work20funtown/funPIC (2).jpg" alt="行銷周邊設計製作-L夾、杯墊、立牌">
-   <img src="./images/work20funtown/funPIC (3).jpg" alt="寫真卡製作">
-   <img src="./images/work20funtown/funPIC (4).jpg" alt="販售周邊-鏡子花紋設計"><img src="./images/work20funtown/funPIC (5).jpg" alt="販售周邊-壓克力花圈設計">
+    <img class="lazyload" data-src="./images/work20funtown/funPIC (9).png" alt="遊戲App內道具圖繪製">
+    <img class="lazyload" data-src="./images/work20funtown/funPIC (21).png" alt="遊戲App內活動的美術設定、背景繪製、標題設計、禮包圖繪製">
+    <img class="lazyload" data-src="./images/work20funtown/funPIC (10).png" alt="遊戲Banner">
+       <img class="lazyload" data-src="./images/work20funtown/funPIC (6).jpg" alt="販售周邊-壓克力立牌與食物插畫繪製">
+   <img class="lazyload" data-src="./images/work20funtown/funPIC (1).jpg" alt="行銷周邊設計-扇子、茶罐腰封">
+   <img class="lazyload" data-src="./images/work20funtown/funPIC (2).jpg" alt="行銷周邊設計製作-L夾、杯墊、立牌">
+   <img class="lazyload" data-src="./images/work20funtown/funPIC (3).jpg" alt="寫真卡製作">
+   <img class="lazyload" data-src="./images/work20funtown/funPIC (4).jpg" alt="販售周邊-鏡子花紋設計"><img class="lazyload" data-src="./images/work20funtown/funPIC (5).jpg" alt="販售周邊-壓克力花圈設計">
 
-   <img src="./images/work20funtown/funPIC (7).jpg" alt="販售周邊製作-抱枕"><img src="./images/work20funtown/funPIC (8).jpg" alt="販售周邊設計-絲巾花紋"><img src="./images/work20funtown/funPIC (9).jpg" alt="異業合作店家周邊物展示"><img src="./images/work20funtown/funPIC (10).jpg" alt="掛軸設計製作"><img src="./images/work20funtown/funPIC (11).jpg" alt="馬克杯設計製作"><img src="./images/work20funtown/funPIC (12).jpg" alt="立牌設計製作"><img src="./images/work20funtown/funPIC (13).jpg" alt="販售周邊設計-帆布包花紋設計"><img src="./images/work20funtown/funPIC (14).jpg" alt="杯墊設計製作"><img src="./images/work20funtown/funPIC (15).jpg" alt="茶罐與外盒的腰封設計"><img src="./images/work20funtown/funPIC (16).jpg" alt="扇子設計"><img src="./images/work20funtown/funPIC (19).jpg" alt="合成圖製作與文字設計"><img src="./images/work20funtown/funPIC (20).jpg" alt="異業合作產品包裝設計"><img src="./images/work20funtown/funPIC (21).jpg" alt="虛寶卡設計-正面"><img src="./images/work20funtown/funPIC (22).jpg" alt="遊戲Banner">
-   <img src="./images/work20funtown/funPIC (23).jpg" alt="異業合作產品包裝設計">  
-   <img src="./images/work20funtown/funPIC (24).jpg" alt="大型立牌設計">  
-   <img src="./images/work20funtown/funPIC (25).jpg" alt="鏡子鑰匙圈設計">  
-   <img src="./images/work20funtown/funPIC (26).jpg" alt="網站吉祥物-咩寶的角色設計"> 
-   <img src="./images/work20funtown/funPIC (23).png" alt="網站吉祥物-咩寶的角色設計">
-<img src="./images/work20funtown/funPIC (1).png" alt="滑鼠墊、立牌、海報製作">
-<img src="./images/work20funtown/funPIC (2).png" alt="立牌設計與模擬圖製作"><img src="./images/work20funtown/funPIC (3).png" alt="錢包花紋設計"><img src="./images/work20funtown/funPIC (4).png" alt="遊戲宣傳圖設計"><img src="./images/work20funtown/funPIC (5).png" alt="異業合作Banner設計"><img src="./images/work20funtown/funPIC (6).png" alt="用illustrator軟體插畫繪製"><img src="./images/work20funtown/funPIC (7).png" alt="App裡logo(濕背秀)設計與提醒小鈴鐺繪製"><img src="./images/work20funtown/funPIC (8).png" alt="遊戲Banner"><img src="./images/work20funtown/funPIC (11).png" alt="遊戲Banner"><img src="./images/work20funtown/funPIC (12).png" alt="遊戲Banner"><img src="./images/work20funtown/funPIC (13).png" alt="遊戲App介面UI設計"><img src="./images/work20funtown/funPIC (14).png" alt="菜單設計"><img src="./images/work20funtown/funPIC (15).png" alt="遊戲App直播介面UI設計"><img src="./images/work20funtown/funPIC (16).png" alt="異業合作-指甲油外包裝設計與Banner製作"><img src="./images/work20funtown/funPIC (17).png" alt="御守插畫圖繪製"><img src="./images/work20funtown/funPIC (19).png" alt="遊戲Banner"><img src="./images/work20funtown/funPIC (20).png" alt="遊戲Banner"><img src="./images/work20funtown/funPIC (22).png" alt="販售周邊製作-桌曆"><img src="./images/work20funtown/funPIC (17).jpg" alt="海報文宣設計"><img src="./images/work20funtown/funPIC (18).jpg" alt="菜單設計">
+   <img class="lazyload" data-src="./images/work20funtown/funPIC (7).jpg" alt="販售周邊製作-抱枕"><img class="lazyload" data-src="./images/work20funtown/funPIC (8).jpg" alt="販售周邊設計-絲巾花紋"><img class="lazyload" data-src="./images/work20funtown/funPIC (9).jpg" alt="異業合作店家周邊物展示"><img class="lazyload" data-src="./images/work20funtown/funPIC (10).jpg" alt="掛軸設計製作"><img class="lazyload" data-src="./images/work20funtown/funPIC (11).jpg" alt="馬克杯設計製作"><img class="lazyload" data-src="./images/work20funtown/funPIC (12).jpg" alt="立牌設計製作"><img class="lazyload" data-src="./images/work20funtown/funPIC (13).jpg" alt="販售周邊設計-帆布包花紋設計"><img class="lazyload" data-src="./images/work20funtown/funPIC (14).jpg" alt="杯墊設計製作"><img class="lazyload" data-src="./images/work20funtown/funPIC (15).jpg" alt="茶罐與外盒的腰封設計"><img class="lazyload" data-src="./images/work20funtown/funPIC (16).jpg" alt="扇子設計"><img class="lazyload" data-src="./images/work20funtown/funPIC (19).jpg" alt="合成圖製作與文字設計"><img class="lazyload" data-src="./images/work20funtown/funPIC (20).jpg" alt="異業合作產品包裝設計"><img class="lazyload" data-src="./images/work20funtown/funPIC (21).jpg" alt="虛寶卡設計-正面"><img class="lazyload" data-src="./images/work20funtown/funPIC (22).jpg" alt="遊戲Banner">
+   <img class="lazyload" data-src="./images/work20funtown/funPIC (23).jpg" alt="異業合作產品包裝設計">  
+   <img class="lazyload" data-src="./images/work20funtown/funPIC (24).jpg" alt="大型立牌設計">  
+   <img class="lazyload" data-src="./images/work20funtown/funPIC (25).jpg" alt="鏡子鑰匙圈設計">  
+   <img class="lazyload" data-src="./images/work20funtown/funPIC (26).jpg" alt="網站吉祥物-咩寶的角色設計"> 
+   <img class="lazyload" data-src="./images/work20funtown/funPIC (23).png" alt="網站吉祥物-咩寶的角色設計">
+<img class="lazyload" data-src="./images/work20funtown/funPIC (1).png" alt="滑鼠墊、立牌、海報製作">
+<img class="lazyload" data-src="./images/work20funtown/funPIC (2).png" alt="立牌設計與模擬圖製作"><img class="lazyload" data-src="./images/work20funtown/funPIC (3).png" alt="錢包花紋設計"><img class="lazyload" data-src="./images/work20funtown/funPIC (4).png" alt="遊戲宣傳圖設計"><img class="lazyload" data-src="./images/work20funtown/funPIC (5).png" alt="異業合作Banner設計"><img class="lazyload" data-src="./images/work20funtown/funPIC (6).png" alt="用illustrator軟體插畫繪製"><img class="lazyload" data-src="./images/work20funtown/funPIC (7).png" alt="App裡logo(濕背秀)設計與提醒小鈴鐺繪製"><img class="lazyload" data-src="./images/work20funtown/funPIC (8).png" alt="遊戲Banner"><img class="lazyload" data-src="./images/work20funtown/funPIC (11).png" alt="遊戲Banner"><img class="lazyload" data-src="./images/work20funtown/funPIC (12).png" alt="遊戲Banner"><img class="lazyload" data-src="./images/work20funtown/funPIC (13).png" alt="遊戲App介面UI設計"><img class="lazyload" data-src="./images/work20funtown/funPIC (14).png" alt="菜單設計"><img class="lazyload" data-src="./images/work20funtown/funPIC (15).png" alt="遊戲App直播介面UI設計"><img class="lazyload" data-src="./images/work20funtown/funPIC (16).png" alt="異業合作-指甲油外包裝設計與Banner製作"><img class="lazyload" data-src="./images/work20funtown/funPIC (17).png" alt="御守插畫圖繪製"><img class="lazyload" data-src="./images/work20funtown/funPIC (19).png" alt="遊戲Banner"><img class="lazyload" data-src="./images/work20funtown/funPIC (20).png" alt="遊戲Banner"><img class="lazyload" data-src="./images/work20funtown/funPIC (22).png" alt="販售周邊製作-桌曆"><img class="lazyload" data-src="./images/work20funtown/funPIC (17).jpg" alt="海報文宣設計"><img class="lazyload" data-src="./images/work20funtown/funPIC (18).jpg" alt="菜單設計">
   </div>
 
 
@@ -152,7 +152,7 @@
     <!-- <script src="./js/jquery-3.5.1.js"></script> -->
     <script src="https://code.jquery.com/jquery-3.5.1.js"
         integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-
+        <script src="./js/lazysizes.min.js"></script>
 <script>
     // 菜單點出
 
@@ -176,7 +176,7 @@ $('.picBox img').click(function(){
         $('body').append(` 
          <div class="popup"></div>
     <div class="popBox">
-        <img src="" alt="">
+        <img class="lazyload" data-src="" alt="">
         <svg  class="popclose"><use xlink:href="./icomoon/symbol-defs.svg#icon-close"></use>  </svg>
         <p></p>
     </div>
