--- a/hobbyLine.html
+++ b/hobbyLine.html
@@ -91,7 +91,7 @@
       <!-- <script src="./js/jquery-3.5.1.js"></script> -->
       <script src="https://code.jquery.com/jquery-3.5.1.js"
       integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-
+      <script src="./js/lazysizes.min.js"></script>
 <script>
     // 菜單點出
 
