--- a/index.html
+++ b/index.html
@@ -470,6 +470,7 @@
         integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
         <script src="./js/carousel01.js"></script>
         <script src="./js/chu0mousemove.js"></script>
+        <script src="./js/lazysizes.min.js"></script>
 <script>
 // for swiper  js 
 
