--- a/index.html
+++ b/index.html
@@ -341,16 +341,16 @@
                 <h2>Performances experience</h2>  
               <div class="showbox">
                 <ul class="img-wrap">
-                 <li ><img src="./images/show/pe01.jpg" alt=""></li>
-                 <li><img src="./images/show/pe02.jpg" alt=""></li>
-                 <li><img src="./images/show/pe03.jpg" alt=""></li>
-                 <li><img src="./images/show/pe04.jpg" alt=""></li>
-                 <li><img src="./images/show/pe05.jpg" alt=""></li>
-                 <li><img src="./images/show/pe06.jpg" alt=""></li>
-                 <li><img src="./images/show/pe07.jpg" alt=""></li>
-                 <li><img src="./images/show/pe08.jpg" alt=""></li>
-                 <li><img src="./images/show/pe09.jpg" alt=""></li>
-                 <li><img src="./images/show/pe10.jpg" alt=""></li>
+                 <li ><img class="lazyload" data-src="./images/show/pe01.jpg" alt=""></li>
+                 <li><img class="lazyload" data-src="./images/show/pe02.jpg" alt=""></li>
+                 <li><img class="lazyload" data-src="./images/show/pe03.jpg" alt=""></li>
+                 <li><img class="lazyload" data-src="./images/show/pe04.jpg" alt=""></li>
+                 <li><img class="lazyload" data-src="./images/show/pe05.jpg" alt=""></li>
+                 <li><img class="lazyload" data-src="./images/show/pe06.jpg" alt=""></li>
+                 <li><img class="lazyload" data-src="./images/show/pe07.jpg" alt=""></li>
+                 <li><img class="lazyload" data-src="./images/show/pe08.jpg" alt=""></li>
+                 <li><img class="lazyload" data-src="./images/show/pe09.jpg" alt=""></li>
+                 <li><img class="lazyload" data-src="./images/show/pe10.jpg" alt=""></li>
            
                 </ul>
                 <div class="chevron-left">
