極限電競照片加註文字

--- a/workExtreme.html
+++ b/workExtreme.html
@@ -96,49 +96,49 @@
 
     <p class="STitle">Demo - 網站UI介面、LOGO設計、賽式活動平面設計、提案簡報製作......等 </p>
     <div class="picBox">
-      <img class="lazyload" data-src="./images/work18extreme/extreme (1).png" alt=""><img class="lazyload"
-        data-src="./images/work18extreme/extreme (2).png" alt=""><img class="lazyload"
-        data-src="./images/work18extreme/extreme (3).png" alt=""><img class="lazyload"
-        data-src="./images/work18extreme/extreme (4).png" alt=""><img class="lazyload"
-        data-src="./images/work18extreme/extreme (5).png" alt=""><img class="lazyload"
-        data-src="./images/work18extreme/extreme (6).png" alt=""><img class="lazyload"
-        data-src="./images/work18extreme/extreme (7).png" alt=""><img class="lazyload"
-        data-src="./images/work18extreme/extreme (8).png" alt=""><img class="lazyload"
-        data-src="./images/work18extreme/extreme (28).png" alt=""><img class="lazyload"
-        data-src="./images/work18extreme/extreme (9).png" alt=""><img class="lazyload"
-        data-src="./images/work18extreme/extreme (10).png" alt=""><img class="lazyload"
-        data-src="./images/work18extreme/extreme (11).png" alt=""><img class="lazyload"
-        data-src="./images/work18extreme/extreme (12).png" alt=""><img class="lazyload"
-        data-src="./images/work18extreme/extreme (13).png" alt=""><img class="lazyload"
-        data-src="./images/work18extreme/extreme (14).png" alt=""><img class="lazyload"
-        data-src="./images/work18extreme/extreme (15).png" alt=""><img class="lazyload"
-        data-src="./images/work18extreme/extreme (16).png" alt=""><img class="lazyload"
-        data-src="./images/work18extreme/extreme (17).png" alt=""><img class="lazyload"
-        data-src="./images/work18extreme/extreme (18).png" alt=""><img class="lazyload"
-        data-src="./images/work18extreme/extreme (19).png" alt=""><img class="lazyload"
-        data-src="./images/work18extreme/extreme (20).png" alt=""><img class="lazyload"
-        data-src="./images/work18extreme/extreme (21).png" alt=""><img class="lazyload"
-        data-src="./images/work18extreme/extreme (22).png" alt=""><img class="lazyload"
-        data-src="./images/work18extreme/extreme (23).png" alt=""><img class="lazyload"
-        data-src="./images/work18extreme/extreme (24).png" alt=""><img class="lazyload"
-        data-src="./images/work18extreme/extreme (25).png" alt=""><img class="lazyload"
-        data-src="./images/work18extreme/extreme (26).png" alt=""><img class="lazyload"
-        data-src="./images/work18extreme/extreme (27).png" alt="">
-      <img class="lazyload" data-src="./images/work18extreme/extreme (1).gif" alt="">
-      <img class="lazyload" data-src="./images/work18extreme/extreme (1).jpg" alt=""><img class="lazyload"
-        data-src="./images/work18extreme/extreme (2).jpg" alt=""><img class="lazyload"
-        data-src="./images/work18extreme/extreme (3).jpg" alt=""><img class="lazyload"
-        data-src="./images/work18extreme/extreme (4).jpg" alt=""><img class="lazyload"
-        data-src="./images/work18extreme/extreme (5).jpg" alt=""><img class="lazyload"
-        data-src="./images/work18extreme/extreme (6).jpg" alt=""><img class="lazyload"
-        data-src="./images/work18extreme/extreme (7).jpg" alt=""><img class="lazyload"
-        data-src="./images/work18extreme/extreme (8).jpg" alt=""><img class="lazyload"
-        data-src="./images/work18extreme/extreme (9).jpg" alt=""><img class="lazyload"
-        data-src="./images/work18extreme/extreme (10).jpg" alt=""><img class="lazyload"
-        data-src="./images/work18extreme/extreme (11).jpg" alt=""><img class="lazyload"
-        data-src="./images/work18extreme/extreme (12).jpg" alt=""><img class="lazyload"
-        data-src="./images/work18extreme/extreme (13).jpg" alt=""><img class="lazyload"
-        data-src="./images/work18extreme/extreme (14).jpg" alt="">
+      <img class="lazyload" data-src="./images/work18extreme/extreme (1).png" alt="美術圖繪製"><img class="lazyload"
+        data-src="./images/work18extreme/extreme (2).png" alt="電競隊伍Logo設計"><img class="lazyload"
+        data-src="./images/work18extreme/extreme (3).png" alt="美術圖繪製"><img class="lazyload"
+        data-src="./images/work18extreme/extreme (4).png" alt="美術圖繪製"><img class="lazyload"
+        data-src="./images/work18extreme/extreme (5).png" alt="協會Logo設計初稿"><img class="lazyload"
+        data-src="./images/work18extreme/extreme (6).png" alt="協會Logo設計初稿"><img class="lazyload"
+        data-src="./images/work18extreme/extreme (7).png" alt="電競比賽報名網站規劃"><img class="lazyload"
+        data-src="./images/work18extreme/extreme (8).png" alt="簡報插圖繪製"><img class="lazyload"
+        data-src="./images/work18extreme/extreme (28).png" alt="電競聯賽Logo設計"><img class="lazyload"
+        data-src="./images/work18extreme/extreme (9).png" alt="簡報插圖繪製"><img class="lazyload"
+        data-src="./images/work18extreme/extreme (10).png" alt="EDM設計"><img class="lazyload"
+        data-src="./images/work18extreme/extreme (11).png" alt="協會信封設計"><img class="lazyload"
+        data-src="./images/work18extreme/extreme (12).png" alt="活動文宣排版與繪製"><img class="lazyload"
+        data-src="./images/work18extreme/extreme (13).png" alt="網站UI設計"><img class="lazyload"
+        data-src="./images/work18extreme/extreme (14).png" alt="網站UI設計"><img class="lazyload"
+        data-src="./images/work18extreme/extreme (15).png" alt="Logo設計"><img class="lazyload"
+        data-src="./images/work18extreme/extreme (16).png" alt="電競比賽報名網站規劃><img class="lazyload"
+        data-src="./images/work18extreme/extreme (17).png" alt="獎金字卡設計"><img class="lazyload"
+        data-src="./images/work18extreme/extreme (18).png" alt="協會Logo設計"><img class="lazyload"
+        data-src="./images/work18extreme/extreme (19).png" alt="插圖繪製"><img class="lazyload"
+        data-src="./images/work18extreme/extreme (20).png" alt="大型勘版設計"><img class="lazyload"
+        data-src="./images/work18extreme/extreme (21).png" alt="電競聯賽網站"><img class="lazyload"
+        data-src="./images/work18extreme/extreme (22).png" alt="邀請DM設計"><img class="lazyload"
+        data-src="./images/work18extreme/extreme (23).png" alt="電競聯賽網站規劃"><img class="lazyload"
+        data-src="./images/work18extreme/extreme (24).png" alt="位置圖設計"><img class="lazyload"
+        data-src="./images/work18extreme/extreme (25).png" alt="協會Logo設計初稿"><img class="lazyload"
+        data-src="./images/work18extreme/extreme (26).png" alt="協會Logo設計初稿"><img class="lazyload"
+        data-src="./images/work18extreme/extreme (27).png" alt="電視轉播鏡面設計">
+      <img class="lazyload" data-src="./images/work18extreme/extreme (1).gif" alt="電競聯賽網站">
+      <img class="lazyload" data-src="./images/work18extreme/extreme (1).jpg" alt="大型牆面廣告設計"><img class="lazyload"
+        data-src="./images/work18extreme/extreme (2).jpg" alt="大圖廣告設計"><img class="lazyload"
+        data-src="./images/work18extreme/extreme (3).jpg" alt="Logo設計"><img class="lazyload"
+        data-src="./images/work18extreme/extreme (4).jpg" alt="布條設計"><img class="lazyload"
+        data-src="./images/work18extreme/extreme (5).jpg" alt="大圖廣告設計"><img class="lazyload"
+        data-src="./images/work18extreme/extreme (6).jpg" alt="關東旗設計"><img class="lazyload"
+        data-src="./images/work18extreme/extreme (7).jpg" alt="活動字卡設計"><img class="lazyload"
+        data-src="./images/work18extreme/extreme (8).jpg" alt="大圖廣告設計"><img class="lazyload"
+        data-src="./images/work18extreme/extreme (9).jpg" alt="大圖廣告設計"><img class="lazyload"
+        data-src="./images/work18extreme/extreme (10).jpg" alt="大圖廣告設計"><img class="lazyload"
+        data-src="./images/work18extreme/extreme (11).jpg" alt="網頁icon設計"><img class="lazyload"
+        data-src="./images/work18extreme/extreme (12).jpg" alt="協助參與電競比賽現場"><img class="lazyload"
+        data-src="./images/work18extreme/extreme (13).jpg" alt="獎金字卡設計"><img class="lazyload"
+        data-src="./images/work18extreme/extreme (14).jpg" alt="邀請卡設計">
 
 
 
