主頁HOM+ svg icon

--- a/home.html
+++ b/home.html
@@ -189,6 +189,24 @@
               </svg>
               <p>Html5</p>
             </div>
+            <div class="skill_SET  col-2 col-sm-2  col-lg-2 col-xl-2 ">
+              <svg class="skills-icon ">
+                <use xlink:href="./icomoon/symbol-defs.svg#icon-javascript"></use>
+              </svg>
+              <p>Javascript</p>
+            </div>
+            <div class="skill_SET  col-2 col-sm-2  col-lg-2 col-xl-2 ">
+              <svg class="skills-icon ">
+                <use xlink:href="./icomoon/symbol-defs.svg#icon-php"></use>
+              </svg>
+              <p>PHP</p>
+            </div>
+            <div class="skill_SET  col-2 col-sm-2  col-lg-2 col-xl-2 ">
+              <svg class="skills-icon ">
+                <use xlink:href="./icomoon/symbol-defs.svg#icon-mysql"></use>
+              </svg>
+              <p>MySQL</p>
+            </div>
 
           </div>
           <!-- <p class="aboutTitle">證照技能</p> -->
