--- a/workFuntown.html
+++ b/workFuntown.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-  <a href="index.html">
+  <a href="home.html">
     <div class="back">
       <p>Back</p>
     </div>
@@ -31,7 +31,7 @@
   </div>
   <nav>
     <div class="navbar">
-      <a href="index.html"><svg class="logo">
+      <a href="home.html"><svg class="logo">
           <use xlink:href="./icomoon/symbol-defs.svg#icon-chu-logo"></use>
         </svg></a>
       <svg class="menu">
