--- a/workExtreme.html
+++ b/workExtreme.html
@@ -20,7 +20,7 @@
 
 <body>
 
-  <a href="index.html">
+  <a href="home.html">
     <div class="back">
       <p>Back</p>
     </div>
@@ -32,7 +32,7 @@
   </div>
   <nav>
     <div class="navbar">
-      <a href="index.html"><svg class="logo">
+      <a href="home.html"><svg class="logo">
           <use xlink:href="./icomoon/symbol-defs.svg#icon-chu-logo"></use>
         </svg></a>
       <svg class="menu">
